2004-09-25  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Depletion Capacitance}):
	Documented handling of depletion and diffusion capacitances
	during transient analysis.

2004-09-22  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Stability considerations}):
	Finished section about stability of integration methods.

2004-09-20  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Stability considerations}): Checked
	zero-stability and absolute stability ranges for Adams-Moulton,
	Adams-Bashford and Gear.  Visualized these in three new plots
	and included them into documentation.

2004-09-19  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Inductor}): Small section
	about the accompanied inductor model for transient analysis
	added.

	* technical.tex (subsubsection{Adams-Bashford}): Documented
	Adams-Bashford and Adams-Moulton integration formulas.

2004-09-14  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Capacitor}): Some more
	documentation about integration methods added.

2004-09-13  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (chapter{Transient Analysis}): Started to
	document transient analysis.

2004-09-10  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Schneider}): Documented
	dispersion models of single microstrip by M.V. Schneider.

2004-09-09  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Schneider}): Documented
	all the M.V. Schneider formulae.

	* mszl.m: Plotting Hammerstad instead of Wheeler.

2004-09-08  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Kirschning and Jansen}):
	Documented dispersion of characteristic impedance of single
	microstrip line acording to Kirschning.
	(subsubsection{Kirschning and Jansen}): Filled the missing
	paper references for coupled microstrips.

2004-09-07  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (chapter{AC Analysis}): Started to document
	the AC simulation and components.
