@@ -4627,7 +4627,7 @@ Z_{12} = Z_{21} = \frac{Z_L}{j\cdot\sin(\beta\cdot l)}
 Y_{11} = Y_{22} = \frac{1}{j\cdot Z_L \cdot \tan(\beta\cdot l)}
 \end{equation}
 \begin{equation}
-Y_{12} = Y_{21} = \frac{1}{-j\cdot Z_L\cdot \sinh(\beta\cdot l)}
+Y_{12} = Y_{21} = \frac{j}{Z_L\cdot \sin(\beta\cdot l)}
 \end{equation}
 
 
