@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: attenuator.h,v 1.6 2004/09/16 10:15:10 ela Exp $
+ * $Id: attenuator.h,v 1.7 2004/09/25 21:09:46 ela Exp $
  *
  */
 
@@ -32,7 +32,6 @@ class attenuator : public circuit
   void calcSP (nr_double_t);
   void calcNoise (nr_double_t);
   void initDC (void);
-  void calcDC (void);
   void initAC (void);
 };
 
