@@ -1,7 +1,7 @@
 /*
  * ccvs.h - ccvs class definitions
  *
- * Copyright (C) 2003 Stefan Jahn <stefan@lkcc.org>
+ * Copyright (C) 2003, 2004 Stefan Jahn <stefan@lkcc.org>
  *
  * This is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: ccvs.h,v 1.4 2004/02/17 15:30:58 ela Exp $
+ * $Id: ccvs.h,v 1.5 2004/09/25 21:09:46 ela Exp $
  *
  */
 
@@ -30,7 +30,8 @@ class ccvs : public circuit
  public:
   ccvs ();
   void calcSP (nr_double_t);
-  void calcDC (void);
+  void initDC (void);
+  void calcAC (nr_double_t);
 };
 
 #endif /* __CCVS_H__ */
